# gyaeoques

./: .gitignore  LICENSE  pyproject.toml
db/: database.py  models.py
etc/: dev.env  prod.env  test.env
prompts/: prompt.yaml
src/joke_reader/: encode_all_jokes.py  encode_jokes.py  ingester.py  make_embeddings.py
src/prompter/: conversator.py
src/reader/: ingester.py
